--- a/content/courses/testing-foundations/knowing-what-to-test.mdx
+++ b/content/courses/testing-foundations/knowing-what-to-test.mdx
@@ -20,6 +20,6 @@ Now that you have a suite of tests for each step, you can write the code necessa
 
 ## Bugs
 
-We also highly recommend that you write tests around any bug that appears in your application. A good approach for this, is to first write a failing test around the bug before fixing it. Once the bug has been fixed your test will pass, which verifies that your new code has eliminated the bug.
+It is highly recommended that you write tests around any bug that appears in your application. A good approach is to first write a failing test around the bug before fixing it. Once the bug has been fixed your test will pass, which verifies that your new code has eliminated the bug.
 
 This way, your test will help to ensure that this bug will never rear its ugly head in the future.
