--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
@@ -21,7 +21,7 @@ Next we will add a custom npm script so we can launch Cypress easily. The entire
 
 Before we run our new script, make sure also to have the application running in a separate terminal window. It is vital to have the application up and running as Cypress cannot execute any tests without it.
 
-If you are using VSCode, you can open the built in terminal with (crtl+` on Mac/Win). Or you can click on View > Terminal in the menu at the top.
+If you are using VSCode, you can open the built-in terminal with (Ctrl+` on Mac/Win). Or you can click on View > Terminal in the menu at the top.
 
 In your terminal enter the following command to start the app.
 
