added testing pyramid image to lesson

--- a/content/courses/testing-foundations/the-testing-pyramid.mdx
+++ b/content/courses/testing-foundations/the-testing-pyramid.mdx
@@ -1,5 +1,9 @@
 # The Testing Pyramid
 
+![](/images/testing-foundations/automated-tools-pyramid.png)
+
+Source: [https://reflect.run/articles/automated-testing-tools/](https://reflect.run/articles/automated-testing-tools/)
+
 The testing pyramid illustrates the various types of tests and their relationship to one another. Developers can be pretty dogmatic and very strongly opinionated when it comes to testing, but remember, while definitions and labels can be helpful, ultimately, "[it's not important what you call it, but what it does](https://web.archive.org/web/20150104002755/http://gojko.net/2011/01/12/the-false-dichotomy-of-tests)" - Gojko Adzic.
 
 ## Unit tests
