updated broken link in markdown file

--- a/content/real-world-examples/overview/custom-cypress-commands.mdx
+++ b/content/real-world-examples/overview/custom-cypress-commands.mdx
@@ -1024,7 +1024,7 @@ async "db:seed"() {
 },
 ```
 
-This task is responsible for making a request to an API endpoint, which triggers the backend to reseed the database. You will see this task quite frequently used within a `beforeEach()` so that we have freshly seeded data before each test is run. This reseeding technique is one of the strategies covered in the [Database Initialization & Seeding lesson](Database%20Initialization%20&%20Seeding%2012d7ce44bc424a3688a7839a7c7cef79.md).
+This task is responsible for making a request to an API endpoint, which triggers the backend to reseed the database. You will see this task quite frequently used within a `beforeEach()` so that we have freshly seeded data before each test is run. This reseeding technique is one of the strategies covered in the [Database Initialization & Seeding lesson](/advanced-cypress-concepts/database-initialization-and-seeding).
 
 ---
 
