--- a/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
+++ b/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
@@ -9,9 +9,9 @@ One of Cypress's most essential and powerful use cases is having it run in your 
   height="315"
   src="https://www.youtube.com/embed/USX6AntcPyg"
   title="YouTube video player"
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowFullScreen
 ></iframe>
 
 ### Introduction to Continuous Integration
