incorporated Parker's Feedback

--- a/content/courses/testing-foundations/manual-vs-automated-testing.mdx
+++ b/content/courses/testing-foundations/manual-vs-automated-testing.mdx
@@ -6,6 +6,18 @@ Manual testing involves someone, typically QA, physically interacting with an ap
 
 Modern software development teams are shipping code into production multiple times a day, which is next to impossible if you are only manually testing. With the advance of Continuous Integration (CI) and Continuous Deployment (CD) modern software development teams are automating as much as possible, including testing, allowing them to push to production multiple times a day confidently.
 
+## What is Continuous Integration?
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/USX6AntcPyg"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
+
 ## Automated Testing
 
 As more and more teams adopt CI/CD systems and want to push to production multiple times a day, automated tests are the only way to scale such demand.
