--- a/content/courses/testing-foundations/the-testing-pyramid.mdx
+++ b/content/courses/testing-foundations/the-testing-pyramid.mdx
@@ -34,7 +34,7 @@ These types of tests are written to test anything that runs in the browser. The 
 
 For example, you might write a single test that registers a new account, logs in to that newly created account, purchases a product and then logs out. This way, you can ensure that all the layers within your application are working together correctly.
 
-End-to-end tests will often replace your integration tests, as they are essentially testing the same thing. However, E2E tests have an ever more significant advantage and value over integration tests, as they are testing real user interactions within your application.
+End-to-end (E2E) tests will often replace your integration tests, as they are essentially testing the same thing. However, E2E tests have an ever more significant advantage and value over integration tests, as they are testing real user interactions within your application.
 
 ## Wrap Up
 
