--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -10,7 +10,7 @@ If you have git installed, you can clone down the [TodoMVC repo](https://github.
 git clone git@github.com:cypress-io/cypress-realworld-testing-todomvc.git
 ```
 
-If you don't want to use git, you can also download a .zip file of the repo by clicking on the green "Code" button and then "Download Zip."
+An alternative to git is to download a .zip file of the repo by clicking on the green "Code" button and then "Download Zip."
 
 ![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-10-21_at_10.13.11-AM.png)
 
