--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -18,7 +18,7 @@ Next, you will need to open the repo in your text editor. We will be using [VS C
 
 ## Install
 
-> Make sure to be using a version of Node that is `v.14` or higher.
+> Node version 14 or higher is required.
 
 You will need to install all of the dependencies with [Yarn](https://yarnpkg.com/). If you don't have it installed, you can install it with this command:
 
