--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -20,7 +20,7 @@ Next, you will need to open the repo in your text editor. We will be using [VS C
 
 > Node version 14 or higher is required.
 
-You will need to install all of the dependencies with [Yarn](https://yarnpkg.com/). If you don't have it installed, you can install it with this command:
+This project uses [Yarn](https://yarnpkg.com/) to manage dependencies. If you do not have [Yarn](https://yarnpkg.com/), you can install it with this command:
 
 ```bash
 npm install -g yarn
