--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -32,7 +32,7 @@ Change directories into the repo.
 cd cypress-realworld-testing-todomvc
 ```
 
-Install all of the dependencies with the following command:
+Install the dependencies with the following command:
 
 ```bash
 yarn install
